# dataset_RFSS

./: .gitignore  EXPERIMENT_RESULTS.txt  PAPER_VALIDATION_PHASE1.txt  PRELIMINARY_RESULTS.md  PROJECT_STATUS_REPORT.txt  README.md  pyproject.toml
config/: signal_specs.yaml
data/: Adjacent_Interference_metadata.npy  Adjacent_Interference_signal.npy  All_Standards_Indoor_NLOS.npy  All_Standards_Rural_LOS.npy  All_Standards_metadata.npy  Dense_Interference_Urban_Mobile.npy  Dense_Interference_metadata.npy  Dense_Interference_mixed.npy  GSM_LTE_Coexist_metadata.npy  GSM_LTE_Coexist_signal.npy  LTE_baseband.npy  Multi_Standard_metadata.npy  UMTS_baseband.npy
data/processed/: Adjacent_Interference_signal.npy  All_Standards_Indoor_NLOS.npy  All_Standards_Rural_LOS.npy  All_Standards_Urban_Mobile.npy  All_Standards_mixed.npy  Dense_Interference_Indoor_NLOS.npy  Dense_Interference_Rural_LOS.npy  GSM_LTE_Coexist_signal.npy  GSM_baseband.npy  Multi_Standard_signal.npy  NR_baseband.npy  UMTS_baseband.npy
docs/api/: api_reference.md  technical_specifications.md
docs/user_guide/: getting_started.md
examples/: complete_demo.py  demo_dataset_generation.py
papers/figures/: create_dataset_characterization.py  create_enhanced_framework_figure.py  create_signal_samples_figure.py  create_stft_analysis.py  generate_data_figures.py  generate_figures.py
papers/manuscript/: PAPER_IMPROVEMENT_SUMMARY.md  PDF_GENERATION_SUMMARY.md  RFSS_PAPER_SUMMARY.md  references.bib  rfss_dataset_manuscript.md  rfss_dataset_paper.tex  rfss_paper_basic.tex  rfss_paper_corrected.tex  rfss_paper_enhanced_10pages.tex  rfss_paper_improved.tex  rfss_paper_simple.tex
results/: paper_validation_report.md  quick_training_results_20250829_022715.json  quick_training_results_20250929_213450.json  training_results_20250829_022521.json
scripts/: benchmark_performance.py  generate_dataset.py  generate_large_dataset.py  generate_validation_dataset.py  inspect_data.py  quick_training_test.py  run_separation_experiments.py  test_actual_performance.py  test_baseline_separation.py  test_mps_performance.py  train_deep_models.py  validate_data_quality.py  validate_parameters.py
src/: __init__.py
src/channel_models/: __init__.py  basic_channels.py
src/data/: __init__.py  rfss_dataset.py
src/mimo/: __init__.py  mimo_channel.py
src/mixing/: __init__.py  signal_mixer.py
src/ml_algorithms/: __init__.py  baseline_algorithms.py  cnn_lstm.py  conv_tasnet.py  dprnn.py
src/signal_generation/: __init__.py  base_generator.py  gsm_generator.py  lte_generator.py  nr_generator.py  umts_generator.py
src/utils/: config_loader.py  modulation.py  signal_utils.py
src/validation/: __init__.py  signal_metrics.py
tests/unit/: test_channel_models.py  test_signal_generators.py  test_validation.py
