[project]
name = "dataset-rfss"
version = "0.1.0"
description = "RF Signal Source Separation Dataset - A comprehensive dataset for 2G/3G/4G/5G RF signals with fading, channel effects, and MIMO"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
readme = "README.md"
license = {text = "CC-BY-4.0"}
requires-python = ">=3.13"
keywords = ["rf", "signal-processing", "5g", "4g", "3g", "2g", "mimo", "dataset", "wireless"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Scientific/Engineering :: Physics",
]

dependencies = [
    "numpy>=1.21.0",
    "scipy>=1.7.0",
    "matplotlib>=3.4.0",
    "pandas>=1.3.0",
    "scikit-learn>=1.0.0",
    "h5py>=3.3.0",
    "hdf5storage>=0.1.18",
    "pyyaml>=6.0",
    "tqdm>=4.62.0",
    "loguru>=0.5.3",
    "seaborn>=0.11.0",
    "plotly>=5.0.0",
    "torch>=2.7.1",
    "torchvision>=0.22.1",
    "torchaudio>=2.7.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.2.0",
    "pytest-cov>=2.12.0",
    "black>=21.0.0",
    "flake8>=3.9.0",
    "isort>=5.9.0",
    "mypy>=0.910",
]
docs = [
    "sphinx>=4.0.0",
    "sphinx-rtd-theme>=0.5.0",
    "myst-parser>=0.15.0",
]
jupyter = [
    "jupyter>=1.0.0",
    "ipykernel>=6.0.0",
    "ipywidgets>=7.6.0",
]
gpu = [
    "torch>=1.9.0",
    # "tensorflow>=2.6.0",  # Not yet compatible with Python 3.13
]
comms = [
    # "commpy>=0.7.0",  # May need to install from source or alternative
]

[project.urls]
Homepage = "https://github.com/yourusername/dataset_RFSS"
Repository = "https://github.com/yourusername/dataset_RFSS"
Documentation = "https://dataset-rfss.readthedocs.io"
"Bug Tracker" = "https://github.com/yourusername/dataset_RFSS/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.black]
line-length = 88
target-version = ['py313']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["dataset_rfss"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --cov=src --cov-report=term-missing"
testpaths = [
    "tests",
]
python_files = [
    "test_*.py",
    "*_test.py",
]

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "scipy.*",
    "matplotlib.*",
    "pandas.*",
    "h5py.*",
    "hdf5storage.*",
    "commpy.*",
    "plotly.*",
    "seaborn.*",
]
ignore_missing_imports = true
